# palace

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  ROADMAP.md  SPEC.md  context_cache_client.py  mcp-config.json  palace.py  pyproject.toml  requirements.txt
.claude/output-styles/: palace-menu.md
.github/: markdown-link-check.json
.github/workflows/: ci.yml  code-quality.yml  release.yml
benchmarks/: context_overhead.py  layered_benchmark.py
crates/palace-cli/: Cargo.toml
crates/palace-cli/src/: context.rs  main.rs  menu.rs  palace_main.rs  session.rs  tui_menu.rs
crates/palace-core/: Cargo.toml
crates/palace-core/src/: anthropic.rs  error.rs  lib.rs  openai.rs  rate_limit.rs
crates/palace-daemon/: Cargo.toml
crates/palace-daemon/src/: main.rs
crates/palace-translator/: Cargo.toml
crates/palace-translator/src/: convert.rs  lib.rs  tests.rs
docs/: ERROR_RECOVERY.md  EXAMPLES.md  MASK_SYSTEM.md  USER_GUIDE.md
palace/: __init__.py  actions.py  core.py  main.py  masks.py  prompts.py  providers.py  recovery.py  steering.py  stream.py  strict.py  turbo.py  utils.py
palace-agent-daemon/: Cargo.toml
palace-agent-daemon/src/: main.rs
palace-context-cache/: Cargo.toml
palace-context-cache/src/: lib.rs  timeline.rs
palace-daemon/: Cargo.toml  README.md  SPEC.md
palace-daemon/src/: block.rs  classifier.rs  delta.rs  lib.rs  spawn.rs  translator.rs
scripts/: analyze_permissions.py
tests/: __init__.py  test_benchmarks.py  test_core.py  test_error_recovery.py  test_integration.py  test_mask_system.py  test_mcp.py  test_modes.py  test_permission_handler.py  test_prompt_building.py  test_prompts.py  test_provider_overrides.py  test_providers.py  test_session_lifecycle.py  test_steering.py  test_strict_mode.py  test_turbo.py  test_turbo_continuation.py  test_turbo_swarm_bugs.py
victories/: 2025-12-10-swarm-consciousness-v1.md
