[workspace]
resolver = "2"
members = [
    "crates/palace-core",
    "crates/palace-translator",
    "crates/palace-cli",
    "crates/palace-daemon",
]

[workspace.package]
version = "5.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/riffcc/palace"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"

# Internal crates
palace-core = { path = "crates/palace-core" }
palace-translator = { path = "crates/palace-translator" }
