[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palace-ai"
version = "0.1.0"
description = "A self-improving Claude wrapper with Recursive Hierarchical Self Improvement (RHSI)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Benjamin Arntzen", email = "zorlin@gmail.com"},
]
keywords = [
    "ai",
    "claude",
    "agent",
    "automation",
    "self-improvement",
    "mcp",
    "llm",
    "wrapper",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "mcp>=0.1.0",
    "json-stream>=2.0.0",
    "questionary>=2.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Zorlin/palace"
Documentation = "https://github.com/Zorlin/palace#readme"
Repository = "https://github.com/Zorlin/palace"
Issues = "https://github.com/Zorlin/palace/issues"
Changelog = "https://github.com/Zorlin/palace/releases"

[project.scripts]
palace = "palace:main"
pal = "palace:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "palace.py",
    "CLAUDE.md",
    "SPEC.md",
    "ROADMAP.md",
]
exclude = [
    ".venv",
    ".palace",
    "tests",
    "*.pyc",
    "__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=palace",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["palace.py"]
omit = [
    "tests/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.venv
  | \.git
  | \.pytest_cache
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
