[package]
name = "palace-agent-daemon"
version = "0.1.0"
edition = "2021"
description = "Shared rate limit daemon and agent registry for Palace swarms"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "palace-agent-daemon"
path = "src/main.rs"
