[package]
name = "palace-context-cache"
version = "0.1.0"
edition = "2021"
description = "High-performance context cache with fsnotify for Palace swarm consciousness"
license = "MIT"

[dependencies]
# Filesystem watching
notify = { version = "7", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Fast serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Memory-mapped files for content
memmap2 = "0.9"

# Fast hashmap
dashmap = "6"

# Parking lot for faster mutexes
parking_lot = "0.12"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client for Ollama API
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
futures = "0.3"

[[bin]]
name = "palace-cache-daemon"
path = "src/bin/daemon.rs"

[lib]
name = "palace_context_cache"
path = "src/lib.rs"
