[package]
name = "palace-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "palace-daemon"
path = "src/main.rs"

[dependencies]
palace-core = { workspace = true }
palace-translator = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
regex = "1"
