[package]
name = "palace-translator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
palace-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
